--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "build": "babel src -d dist"
+        "build": "babel src -d dist",
+        "lint": "eslint ."
     },
     "repository": {
         "type": "git",
@@ -19,7 +20,13 @@
     "devDependencies": {
         "@babel/cli": "^7.12.13",
         "@babel/core": "^7.12.13",
-        "@babel/preset-env": "^7.12.13"
+        "@babel/preset-env": "^7.12.13",
+        "@typescript-eslint/eslint-plugin": "^4.14.2",
+        "@typescript-eslint/parser": "^4.14.2",
+        "eslint": "^7.19.0",
+        "eslint-config-airbnb-base": "^14.2.1",
+        "eslint-plugin-import": "^2.22.1",
+        "eslint-plugin-react": "^7.22.0"
     },
     "dependencies": {
         "core-js": "^3.8.3"
